# datascience-capstone

./: .gitattributes  .gitignore  CODEOWNERS  LICENSE  README.md  devsetup.bat  devsetup.sh  lint.bat  lint.sh  pyproject.toml  requirements.txt
.github/workflows/: import-lint.yml  lint.yml  py-lint.yml  unit-tests.yml
data/processed/: engineered_features_logistic.parquet  engineered_features_nn.parquet  engineered_features_xgboost.parquet  particle_labeled.parquet  preprocessed_minimal.parquet  preprocessed_nist.parquet
docs/: CLONING.md  CONTRIBUTING.md  DEVELOPER_SETUP.md  QuickStart.md  linting.md  python_setup.md  testing.md
docs/data_dictionaries/: 03_xgboost_model_exploration_datadict.md  04_xgboost_model_datadict.md  eda_nfi_particle_labeled.md  xgboost_final.md
docs/github_actions/: linting.md  unit_tests.md
docs/workflows/: linting.md
notebooks/: NOTEBOOKS.md  README.md
notebooks/00_tidy_data_prep/: NFI_data_load_and_merge.ipynb  create_main_data.ipynb
notebooks/01_eda/: oxygen.ipynb  particle_eda.ipynb
notebooks/03_model_exploration/: Logisitic_Regression.ipynb  README.md  nn_baseline_v2.ipynb  xgboost_baseline_v2.ipynb
notebooks/04_model/: HP_Logistic_Regression.ipynb  Logisitic Regression.ipynb  README.md  nn_tuning.ipynb  xgb_optimize.ipynb
notebooks/05_evaluation/: nn_ablation_study.ipynb  xgb_eval_v2.ipynb
notebooks/99_presentation/: README.md  (+3 more)
src/: README.md  SOURCE.md  eda.py  exceptions.py  utilities.py
tests/: README.md  TESTS.md  test_common.py  test_logreg.py  test_nist.py  test_nn.py  test_py_lint.py  test_utilities.py
(+85 files in other folders)
