[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datascience-capstone"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "glasbey",
    "scikit-learn",
    "xgboost",
    "umap-learn",
    "torch",
    "torchvision",
    "shap",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
