[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datascience-capstone"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "glasbey",
    "scikit-learn",
    "xgboost",
    "umap-learn",
    "torch",
    "shap",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff.lint.per-file-ignores]
# Notebooks routinely import libraries in early cells for use in later cells
# (F401: unused import, E402: import not at top), and a `pd.set_option(...)`
# call near the top of a notebook can easily exceed the default line length
# (E501).
"*.ipynb" = ["E402", "F401", "E501"]
